# dime

./: .gitignore  Makefile  README.md  dialogue.cabal  dime.cabal  stack.yaml
app/: Actions.hs  Opts.hs  Types.hs
config/: models
epub-files/: style.css
scripts/: fake_message.py
specs/: batch-response-00.txt
specs/Dialog/: TypesSpec.hs
specs/Dialogue/Actions/: PublishSpec.hs
specs/Dialogue/Stream/: GoogleSpec.hs  NoteSpec.hs
specs/Dime/: TypesSpec.hs
src/Dialog/: Models.hs  Types.hs
src/Dialog/Actions/: Default.hs  Login.hs
src/Dialogue/: Fields.hs  Handles.hs  Models.hs  Streams.hs  Types.hs  Utils.hs
src/Dialogue/Actions/: Archive.hs  Init.hs  Journal.hs  LinkIndex.hs  Login.hs  Mail.hs  Migrate.hs  Publish.hs  Stats.hs  Update.hs
src/Dialogue/Streams/: Adium.hs  GDoc.hs  Google.hs  Journal.hs  Mail.hs  Note.hs  Twitter.hs
src/Dialogue/Types/: Archive.hs  Dialogue.hs  Publish.hs  Stats.hs
src/Dime/: Auth.hs  Config.hs  Google.hs  Network.hs  Resume.hs  Twitter.hs  Types.hs  Utils.hs
src/Dime/Actions/: Archive.hs  Counts.hs  DMs.hs  Default.hs  Gmail.hs  Login.hs  Merge.hs
src/Dime/Google/: DSL.hs  Labels.hs  Messages.hs  Network.hs  Threads.hs  Types.hs
src/Dime/Google/Network/: Utils.hs
src/Dime/Network/: Utils.hs
src/Dime/Types/: Fields.hs  Google.hs
