name:                dialogue
version:             0.0.0.0
synopsis:            bundling dialogues
description:         aggregating and bundling dialogues into an epub
license:             Apache-2.0
license-file:        LICENSE
author:              Eric Rochester
maintainer:          erochest@gmail.com
copyright:           2016 Eric Rochester
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:            epub-files/style.css

library
  exposed-modules:     Dialogue.Actions.Archive
                     , Dialogue.Actions.Init
                     , Dialogue.Actions.Journal
                     , Dialogue.Actions.Mail
                     , Dialogue.Actions.Migrate
                     , Dialogue.Actions.Publish
                     , Dialogue.Actions.Stats
                     , Dialogue.Actions.Update
                     , Dialogue.Fields
                     , Dialogue.Handles
                     , Dialogue.Models
                     , Dialogue.Streams
                     , Dialogue.Streams.Adium
                     , Dialogue.Streams.GDoc
                     , Dialogue.Streams.Google
                     , Dialogue.Streams.Journal
                     , Dialogue.Streams.Mail
                     , Dialogue.Streams.Note
                     , Dialogue.Streams.Twitter
                     , Dialogue.Types
                     , Dialogue.Types.Archive
                     , Dialogue.Types.Dialogue
                     , Dialogue.Types.Publish
                     , Dialogue.Types.Stats
                     , Dialogue.Utils
  other-modules:       Paths_dialogue
  -- other-extensions:
  build-depends:       base >=4.8 && <4.10
                     , aeson
                     , lens-aeson
                     , authenticate-oauth
                     , bifunctors
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , conduit-extra
                     , containers
                     , directory
                     , filepath
                     , foldl
                     , errors
                     , exceptions
                     , groom
                     , hashable
                     , hoauth2
                     , hsemail
                     , http-client
                     , http-conduit
                     , http-types
                     , lens
                     , lucid
                     , mbox
                     , mime
                     , monad-control
                     , monad-logger
                     , mtl
                     , open-browser
                     , parsec
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , placeholders
                     , process
                     , resourcet
                     , safe-exceptions
                     , sandi
                     , split
                     , time
                     , transformers
                     , transformers-base
                     , text
                     , text-format
                     , twitter-conduit
                     , twitter-types
                     , twitter-types-lens
                     , unordered-containers
                     , wreq
                     , xml-conduit
                     , xml-lens
                     , xml-types
  hs-source-dirs:      src
  default-language:    Haskell2010

executable dialogue
  main-is:             Main.hs
  other-modules:       Actions
                     , Opts
                     , Types
  -- other-extensions:
  build-depends:       base >=4.8 && <5
                     , dialogue
                     , errors
                     , placeholders
                     , time
                     , text
                     , optparse-applicative
                     , errors
  hs-source-dirs:      app
  ghc-options:         -threaded
                       -rtsopts
                       "-with-rtsopts=-N"
                       -- -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
  default-language:    Haskell2010

test-suite dialogue-specs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -rtsopts
  hs-source-dirs:      specs
  main-is:             Specs.hs
  other-modules:         Dialogue.Actions.PublishSpec
                       , Dialogue.Stream.GoogleSpec
                       , Dialogue.Stream.NoteSpec
  build-depends:         base
                       , dialogue
                       , aeson
                       , bytestring
                       , errors
                       , lens
                       , persistent
                       , safe-exceptions
                       , text
                       , time
                       , wreq
                       , QuickCheck
                       , smallcheck
                       , hspec
  default-language:    Haskell2010

benchmark dialogue-bench
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
                       -rtsopts
  hs-source-dirs:      bench
  main-is:             Bench.hs
  -- other-modules:
  build-depends:         base
                       , dialogue
                       , criterion
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/erochest/dialogue
